Add initial file structure

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   </head>
   <body>
     <div class="main">
-      <form class="user__form">
-        <input type="text" name="genre" id="genre"></input>
-        <label for="genre">Genre</label>
-        <input type="text" name="tempo" id="tempo"></input>
-        <label for="tempo">Tempo</label>
-        <button type="submit" name="button">Go!</button>
+      <form class="main__form">
+        <label for="genre">Enter Your Medica issue:</label>
+        <input type="text" name="issue" id="issue"></input>
+
+
+        <button type="submit" name="button">Search</button>
       </form>
-      <div class="bpm"></div>
+      <div class="main__results">
+
+
+      </div>
     </div>
   </body>
 </html>
