--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" name="issue" id="issue"></input>
 
 
-        <button type="submit" name="button">Search</button>
+        <button type="submit" name="button">Submit</button>
       </form>
       <div class="main__results">
 
