Add results to Dom

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <body>
     <div class="main">
       <form class="main__form">
-        <label for="genre">Enter Your Medica issue:</label>
+        <label for="genre">Enter Your Medical issue:</label>
         <input type="text" name="issue" id="issue"></input>
 
 
         <button type="submit" name="button">Submit</button>
       </form>
       <div class="main__results">
+
+
 
 
       </div>
