--- a/index.html
+++ b/index.html
@@ -4,22 +4,19 @@
     <link rel="stylesheet" href="build/css/app.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title>Spotify</title>
+    <title>Doctor Search</title>
   </head>
   <body>
     <div class="main">
       <form class="main__form">
         <label for="genre">Enter Your Medical issue:</label>
         <input type="text" name="issue" id="issue"></input>
-
-
         <button type="submit" name="button">Submit</button>
       </form>
+      <div class="main__title">
+        <h1>Reccommended Doctors:</h1>
+      </div>
       <div class="main__results">
-
-
-
-
       </div>
     </div>
   </body>
