Update Readme file, clean logic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button type="submit" name="button">Submit</button>
       </form>
       <div class="main__title">
-        <h1>Reccommended Doctors:</h1>
+        <h1>Recommended Doctors:</h1>
       </div>
       <div class="main__results">
       </div>
